[package]
name = "valser"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.18.1", default-features = false, features = [
    "bevy_winit",
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_color",
    "bevy_log",
    "default_font",
    "x11",
    "wayland",
] }

bevy_egui = "0.39.1"

rodio = { version = "*", default-features = false, features = [
    "playback",
    "symphonia-all",
    "symphonia-ogg",
    "symphonia-mkv",
] }

ogg = "0.9"
opus = "0.3"

rfd = "0.17.1"
