[package]
name = "valser"
description = "Music player with niche and or useless features"

license = "GPL-3.0-or-later"

repository = "https://github.com/MagicTINTIN/Valser"
documentation = "https://github.com/MagicTINTIN/Valser/wiki"

version = "0.2.0"
edition = "2021"

[package.metadata.release]
pre-release-hook = ["git", "cliff", "-o", "CHANGELOG.md"]
pre-release-commit-message = "chore(release): {{version}}"
tag-message = "Release {{version}}"
tag-name = "v{{version}}"
sign-tag = false

[dependencies]
bevy = { version = "0.18.1", default-features = false, features = [
    "bevy_winit",
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_color",
    "bevy_log",
    "default_font",
    "x11",
    "wayland",
] }

bevy_egui = "0.39.1"

rodio = { version = "*", default-features = false, features = [
    "playback",
    "symphonia-all",
    "symphonia-ogg",
    "symphonia-mkv",
] }

ogg = "0.9"
opus = "0.3"

rfd = "0.17.1"
rand = "0.10.1"
walkdir = "2.5.0"
lofty = "0.24.0" # for tag reading (artist, title, genre)
mpris-server = "0.10.0"
smol = "2.0.2"
futures = "0.3.32"
